--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,11 @@
       href="https://avatars.githubusercontent.com/u/69747115?v=4"
       type="image/x-icon"
     />
-    <title>React</title>
+    <title>Image finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="root-modal"></div>
   </body>
 </html>
